--- a/PaginaOneiece/wwwroot/css/site.css
+++ b/PaginaOneiece/wwwroot/css/site.css
@@ -15,4 +15,32 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-image: url("../../Fondo.jpg");
+}
+
+.InfoSerie
+{
+ background-image: url("../../infoSerie.jfif");
+  position: fixed;
+  top: 10%;
+  left: 2%;
+  width: 50%;
+  height: auto;
+  color: black;
+}
+.poderes
+{
+ background-image: url("../../infoSerie.jfif");
+  position: fixed;
+  bottom: 0%;
+  left: 2%;
+  width: 50%;
+  height: auto;
+  color: black;
+}
+.creador
+{
+  position: fixed;
+  bottom: 10%;
+  right: 5%;
 }
