Diseño index y model Usuario

--- a/PaginaOnePiece/Views/Home/Index.cshtml
+++ b/PaginaOnePiece/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿<body>
-    <div class="InfoSerie">
+  <div class="container">
+      <div class="InfoSerie">
+        <h2 class="Titulos">Resumen</h2>
         <h6>One Piece es la historia de un chico llamado Monkey D. Luffy, quién se inspiró en Shanks, un pirata que le
             salvó la vida, para convertirse en el Rey de los Piratas. Al comienzo de la serie, veinticuatro años antes
             de la historia actual, un pirata llamado Gol D. Roger, conocido como el Rey de los Piratas, fue ejecutado,
@@ -7,8 +9,9 @@
             sería conocida como «la Gran Era de la Piratería», innumerables piratas se dispusieron a buscar el tesoro
             causando grandes problemas al Gobierno Mundial. Monkey D. Luffy se convierte en uno de ellos, deseando ser
             el próximo Rey de los Piratas y se dispone a reunir compañeros de tripulación y comenzar sus aventuras.</h6>
-    </div>
-    <div class="poderes">
+     </div>
+     <div class="poderes">
+        <h2 class="Titulos">Poderes</h2>
         <h6>Las frutas del diablo (悪魔の実 Akuma no Mi?): son unos frutos místicos que se encuentran en el mundo de One
             Piece y otorgan al consumidor una habilidad determinada en función de la fruta que se coma.</h6>
         <h6>El haki (覇気 Haki?, lit. «Ambición»): es una fuerza misteriosa que se encuentra en cada ser viviente del
@@ -25,8 +28,13 @@
         <h6>Arma de fuego
             de las armas cuerpo a cuerpo. En el mundo de One Piece, las armas de fuego son armas extremadamente
             populares, solo superadas por las espadas. Los combatientes que se especializan en el uso de armas</h6>
+     </div>
+     <div class="creador">
+        <h2 class="Titulos">Creador</h2>
+        <img src="/creador.jfif" alt="">
+        <a >Nombre: Eiichirō Oda</a>
+        <h6>Nacimiento: 1 de enero de 1975 (edad 47 años)</h6>
+        <h6>Hijos: 2 (dos hijas nacidas en 2006 y 2009)</h6>
     </div>
-    <div class="creador">
-        <a href="">HOLA</a>
-    </div>
+ </div>
 </body>
