--- a/PaginaOnePiece/Views/Home/Index.cshtml
+++ b/PaginaOnePiece/Views/Home/Index.cshtml
@@ -11,23 +11,23 @@
             el próximo Rey de los Piratas y se dispone a reunir compañeros de tripulación y comenzar sus aventuras.</h6>
      </div>
      <div class="poderes">
-        <h2 class="Titulos">Poderes</h2>
+        <h2 class="Titulos">Poderes/Metodos de combate</h2>
         <h6>Las frutas del diablo (悪魔の実 Akuma no Mi?): son unos frutos místicos que se encuentran en el mundo de One
             Piece y otorgan al consumidor una habilidad determinada en función de la fruta que se coma.</h6>
         <h6>El haki (覇気 Haki?, lit. «Ambición»): es una fuerza misteriosa que se encuentra en cada ser viviente del
             mundo de One Piece. No es diferente de los sentidos comunes que la gente normalmente posee. Sin embargo, la
             mayoría de las personas no lo notan o fallan en despertarlo. Normalmente, hay dos tipos de haki común en
             todos dado el entrenamiento adecuado, mas hay un tercer tipo de haki que solo un reducido grupo de
-            personajes posee.[4] En términos simples, haki es la capacidad de sentir y utilizar la energía espiritual y
+            personajes posee. En términos simples, haki es la capacidad de sentir y utilizar la energía espiritual y
             dominar a los enemigos.</h6>
 
-        <h6>Armas ancestrales
+        <h6>Armas ancestrales:
             Las armas ancestrales (古代兵器 Kodai Heiki) son las armas de destrucción masiva más peligrosas del mundo que
             fueron construidas durante el Siglo Vacío. Son sólo tres: Pluton, Poseidon y Uranus. Estas armas</h6>
             
-        <h6>Arma de fuego
-            de las armas cuerpo a cuerpo. En el mundo de One Piece, las armas de fuego son armas extremadamente
-            populares, solo superadas por las espadas. Los combatientes que se especializan en el uso de armas</h6>
+        <h6>Armas de fuego y espadas:
+             En el mundo de One Piece, las armas de fuego son armas extremadamente
+            populares, solo superadas por las espadas. Los combatientes que se especializan en el uso de espadas (espadachines) pueden llegar a ser muy fuertes, dependiendo de la espada y destreza que tenga.</h6>
      </div>
      <div class="creador">
         <h2 class="Titulos">Creador</h2>
