--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                    asp-action="Privacy">Menu mares</a>
+                                    asp-action="TemporadasxMar">Menu mares</a>
                             </li>
                         </ul> 
                         <a class="logo" asp-area="" asp-controller="Home" asp-action="Privacy"></a><img class="logo" src="/OnePieceLogo.jpg" alt=""></a>
