errores arreglados faltan home controler y views

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,8 +28,7 @@
                                     temporadas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                    asp-action="TemporadasxMar">Menu mares</a>
+                                <a class="nav-link text-dark">Menu mares</a>
                             </li>
                         </ul> 
                         <a class="logo" asp-area="" asp-controller="Home" asp-action="Privacy"></a><img class="logo" src="/OnePieceLogo.jpg" alt=""></a>
