--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,7 +15,7 @@ html {
 
 body {
   margin-bottom: 60px;
-  background-image: url("../../Fondo.jpg");
+  /*background-image: url("../../Fondo.jpg");*/
 }
 
 .InfoSerie
