--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PaginaOneiece
-@using PaginaOneiece.Models
+﻿@using PaginaOnePiece
+@using PaginaOnePiece.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
