--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -6,7 +6,7 @@
     <div class="card-body">
     <h1 class="card-text">@temporada.NombreTemporada</h1>
      <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTeporada" onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Mas info</button>
-     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTeporada" onclick="mostrarPersonajes(@Temporada.IdTemporada)">Personajes</button>
+     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTeporada" onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
   </div>
 </div> 
 }
