--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -5,8 +5,8 @@
     <img class="card-img-top" src="@temporada.Foto" alt="Card image cap">
     <div class="card-body">
     <h1 class="card-text">@temporada.NombreTemporada</h1>
-     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTeporada" onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Mas info</button>
-     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTeporada" onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
+     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTemporada" onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Mas info</button>
+     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTemporada" onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
   </div>
 </div> 
 }
