--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -1,33 +1,41 @@
 <body>
-@foreach (Temporada temporada in @ViewBag.ListaTemporadas)
-{
-    <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="/@temporada.Foto" alt="Card image cap">
-    <div class="card-body">
-    <h3 class="card-text">@temporada.NombreTemporada</h3>
-     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTemporada" onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Info</button>
-     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTemporada" onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
-     <a class="btn btn-danger" href='@Url.Action("EliminarTemporada","Home", new{IdTemporada=@temporada.IdTemporada})'>Eliminar</a>
+  <div class="row">
+    @foreach (Temporada temporada in @ViewBag.ListaTemporadas)
+    {
+      <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top imagenTemp" src="/@temporada.Foto" alt="Card image cap">
+          <div class="card-body">
+            <h3 class="card-text">@temporada.NombreTemporada</h3>
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTemporada"
+            onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Info</button>
+            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTemporada"
+            onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
+            <a class="btn btn-danger"
+            href='@Url.Action("EliminarTemporada","Home", new{IdTemporada=@temporada.IdTemporada})'>Eliminar</a>
+          </div>
+        </div>
+      </div>
+    }
   </div>
-</div> 
-}
-<div class="modal fade" id="ModalTemporada" tabindex="-1" role="dialog" aria-labelledby="ModalTemporada" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="Titulo"></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id ="DescripcionTemporada">
-        
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  <div class="modal fade" id="ModalTemporada" tabindex="-1" role="dialog" aria-labelledby="ModalTemporada"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="Titulo"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="DescripcionTemporada">
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
+  <a class="btn btn-success" href='@Url.Action("AgregarTemporada", "Home")'>Agregar Temporada</a>
 </body>
