--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,8 +15,10 @@ html {
 
 body {
   margin-bottom: 60px;
-  /*background-image: url("../../Fondo.jpg");*/
-}
+  background-image: url("../../Fondo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
 
 .InfoSerie
 {
@@ -64,4 +66,10 @@ body {
 {
   width: 12%;
   height: auto;
+}
+
+.imagenTemp
+{
+  width: 100%;
+  height: 300px;
 }
