--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -73,3 +73,15 @@ body {
   width: 100%;
   height: 300px;
 }
+#CardPersonajes{
+  margin-left: 18%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+#imgPersonaje{
+  width: 50%;
+  height: auto;
+  margin-top: 5%;
+}
