--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,9 +12,10 @@
 
 <body>
     <header>
-        <div class="nav">
+        <div class="nav letras">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent box-shadow mb-3">
                 <div class="container-fluid">
+                    <a class="navbar-brand logo" asp-area="" asp-controller="Home" asp-action="Index"></a><img class="logo" src="/OnePieceLogo.jpg" alt=""></a>
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">One Piece</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -31,7 +32,6 @@
                                 <a class="nav-link text-dark">Menu mares</a>
                             </li>
                         </ul> 
-                        <a class="logo" asp-area="" asp-controller="Home" asp-action="Privacy"></a><img class="logo" src="/OnePieceLogo.jpg" alt=""></a>
                     </div>
                 </div>
             </nav>
