--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -31,7 +31,7 @@
         <div class="modal-body" id="DescripcionTemporada">
 
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer" id="Botones">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
