--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -85,3 +85,10 @@ body {
   height: auto;
   margin-top: 5%;
 }
+#botonAgregarPersonaje{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: yellow;
+  color: black;
+}
