--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                                     temporadas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark">Menu mares</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="MenuMares">Menu mares</a>
                             </li>
                         </ul> 
                     </div>
