--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Temporadas">Ver
+                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Temporadas">Ver
                                     temporadas</a>
                             </li>
                             <li class="nav-item">
