--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -1,9 +1,10 @@
+<div class="container">
+ <div class="row">
 
- 
     @foreach (Temporada temporada in @ViewBag.ListaTemporadas)
     {
       <div class="col-sm-4">
-        <div class="card margen" style="width: 18rem;">
+        <div class="card margen">
           <img class="card-img-top imagenTemp" src="/@temporada.Foto" alt="Card image cap">
           <div class="card-body">
             <h3 class="card-text">@temporada.NombreTemporada</h3>
@@ -17,6 +18,7 @@
         </div>
       </div>
     }
+ </div>
 
   <div class="modal fade" id="ModalTemporada" tabindex="-1" role="dialog" aria-labelledby="ModalTemporada"
     aria-hidden="true">
@@ -39,3 +41,4 @@
   </div>
   <a class="btn btn-success agregarTemporada" href='@Url.Action("AgregarTemporada", "Home")'>Agregar Temporada</a>
 
+</div>
