--- a/Views/Home/AgregarPersonaje.cshtml
+++ b/Views/Home/AgregarPersonaje.cshtml
@@ -1,17 +1,18 @@
 <body>
-    <form action='@Url.Action("GuardarPersonaje", "Home", new{IdPersonaje= @ViewBag.IdPersonaje})' method="post"
+    <form action='@Url.Action("GuardarPersonaje", "Home", new{IdTemporada=@ViewBag.IdTemporada})' method="post"
         enctype="multipart/form-data">
-        <label for="inputPassword5" class="form-label">Nombre</label>
+        <label for="inputPassword5" class="form-label" style="color: white;">Nombre</label>
         <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
             name="NombrePersonaje">
         <div class="form-text">
         </div>
-        <label for="inputPassword5" class="form-label">Info del personaje</label>
+        <label for="inputPassword5" class="form-label" style="color: white;">Info del personaje</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="InfoPersonaje"></textarea>
         <div class="form-text">
         </div>
         <br>
-        <label for="exampleFormControlSelect1">En que mar nacio el personaje:</label>
+        <br>
+        <label for="exampleFormControlSelect1" style="color: white;">En que mar nacio el personaje:</label>
         <div class="form-text" id="exampleFormControlSelect1">
             <select name="IdMar">
                  @foreach (Mar item in ViewBag.ListaMares)
@@ -22,7 +23,7 @@
         </div>
         <br>
         <br>
-        <label for="exampleFormControlSelect2">Raza del personaje</label>
+        <label for="exampleFormControlSelect2" style="color: white;">Raza del personaje</label>
         <div class="form-text" id="exampleFormControlSelect2">
             <select name="IdRaza">
                  @foreach (Raza item in ViewBag.ListaRazas)
@@ -33,44 +34,55 @@
         </div>
         <br>
         <br>
-        <label for="exampleFormControlSelect1">Bando del personaje:</label>
-        <div class="form-text" id="exampleFormControlSelect1">
+        <label for="exampleFormControlSelect3" style="color: white;">Bando del personaje:</label>
+        <div class="form-text" id="exampleFormControlSelect3">
             <select name="IdBando">
                  @foreach (Bando item in ViewBag.ListaBandos)
                  {
                     <option value="@item.IdBando">@item.NombreBando</option>
                 }
             </select>
-        <label for="exampleFormControlSelect1">Haki de armadura:</label>
-        <div class="form-text" id="exampleFormControlSelect1">
+            <br>
+            <br>
+        <label for="exampleFormControlSelect4 " style="color: white;">Haki de armadura:</label>
+        <div class="form-text" id="exampleFormControlSelect4">
             <select name="IdHakiArmadura">
                  @foreach (HakiArmadura item in ViewBag.ListaHakiA)
                  {
                     <option value="@item.IdHakiArmadura">@item.EstadoHA</option>
                 }
             </select>
+            <br>
+            <br>
         </div>
-        <label for="exampleFormControlSelect1">Haki de observacion:</label>
-        <div class="form-text" id="exampleFormControlSelect1">
+        <label for="exampleFormControlSelect5" style="color: white;">Haki de observacion:</label>
+        <div class="form-text" id="exampleFormControlSelect5">
             <select name="IdHakiObservacion">
                  @foreach (HakiObservacion item in ViewBag.ListaHakiO)
                  {
                     <option value="@item.IdHakiObservacion">@item.EstadoHO</option>
                 }
             </select>
+            <br>
+            <br>
         </div>
-        <label for="exampleFormControlSelect1">Haki deL rey:</label>
-        <div class="form-text" id="exampleFormControlSelect1">
+        <label for="exampleFormControlSelect6" style="color: white;">Haki deL rey:</label>
+        <div class="form-text" id="exampleFormControlSelect6">
             <select name="IdHakiRey">
                  @foreach (HakiRey item in ViewBag.ListaHakiR)
                  {
                     <option value="@item.IdHakiRey">@item.EstadoHR</option>
                 }
             </select>
+            <br>
+            <br>
         </div>
+        <label for="number" style="color: white;">Recompensa:</label>
         <input id="number" type="number" name="Recompensa">
-        <label class="form-label" for="customFile">Foto del personaje</label>
-        <input type="file" name="Foto" />
+        <br>
+        <br>
+        <label class="form-label" for="customFile" style="color: white;">Foto del personaje</label>
+        <input type="file" name="Foto" style="color: white;"/>
         <br>
         <br>
         <input type="hidden" name="IdTemporada" value="@ViewBag.IdTemporada">
