--- a/Views/Home/AgregarPersonaje.cshtml
+++ b/Views/Home/AgregarPersonaje.cshtml
@@ -81,6 +81,16 @@
         <input id="number" type="number" name="Recompensa">
         <br>
         <br>
+        <label for="exampleFormControlSelect7" style="color: white;">Tripulacion:</label>
+        <div class="form-text" id="exampleFormControlSelect7">
+            <select name="IdTripulacion">
+                 @foreach (Tripulacion item in ViewBag.ListaTripulaciones)
+                 {
+                    <option value="@item.IdTripulacion">@item.NombreTripulacion</option>
+                }
+            </select>
+            <br>
+            <br>
         <label class="form-label" for="customFile" style="color: white;">Foto del personaje</label>
         <input type="file" name="Foto" style="color: white;"/>
         <br>
