--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -1,48 +1,53 @@
-<<<<<<< HEAD
-<div class="row">
-=======
 <div class="container">
- <div class="row">
+      <div class="row">
 
->>>>>>> 87fbd348103f296a87347b0aca8c7c7eeac740e7
-    @foreach (Temporada temporada in @ViewBag.ListaTemporadas)
-    {
-      <div class="col-sm-4">
-        <div class="card margen">
-          <img class="card-img-top imagenTemp" src="/@temporada.Foto" alt="Card image cap">
-          <div class="card-body">
-            <h3 class="card-text">@temporada.NombreTemporada</h3>
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTemporada"
-            onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Info</button>
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTemporada"
-            onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
-            <a class="btn btn-danger"
-            href='@Url.Action("EliminarTemporada","Home", new{IdTemporada=@temporada.IdTemporada})'>Eliminar</a>
+          @foreach (Temporada temporada in @ViewBag.ListaTemporadas)
+          {
+            <div class="col-sm-4">
+              <div class="card margen">
+                <img class="card-img-top imagenTemp" src="/@temporada.Foto" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-text">@temporada.NombreTemporada</h3>
+                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalTemporada"
+                  onclick="mostrarInfoTemporada(@temporada.IdTemporada)">Info</button>
+                  <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalTemporada"
+                  onclick="mostrarPersonajes(@temporada.IdTemporada)">Personajes</button>
+                  <a class="btn btn-danger"
+                  href='@Url.Action("EliminarTemporada","Home", new{IdTemporada=@temporada.IdTemporada})'>Eliminar</a>
+                </div>
+              </div>
+            </div>
+          }
+
+        <div class="modal fade" id="ModalTemporada" tabindex="-1" role="dialog" aria-labelledby="ModalTemporada"
+          aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="Titulo"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body" id="DescripcionTemporada">
+
+              </div>
+              <div class="modal-footer" id="Botones">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="col-sm-4">
+        <a class="" href='@Url.Action("AgregarTemporada", "Home")'>
+          <div class="card margen" style="width: 18rem; display: flex; align-items: center; justify-content: center;">
+            <img src="/AgregarTemp.png" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h4 class="card-text">Agregar temporada</h4>
+        </div>
       </div>
-    }
- </div>
-
-  <div class="modal fade" id="ModalTemporada" tabindex="-1" role="dialog" aria-labelledby="ModalTemporada"
-    aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="Titulo"></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body" id="DescripcionTemporada">
-
-        </div>
-        <div class="modal-footer" id="Botones">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
       </div>
     </div>
-  </div>
-  <a class="btn btn-success agregarTemporada" href='@Url.Action("AgregarTemporada", "Home")'>Agregar Temporada</a>
+        </a>
 
-</div>
+      </div>
