--- a/Views/Home/Temporadas.cshtml
+++ b/Views/Home/Temporadas.cshtml
@@ -3,7 +3,7 @@
 
           @foreach (Temporada temporada in @ViewBag.ListaTemporadas)
           {
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-dm-4">
               <div class="card margen">
                 <img class="card-img-top imagenTemp" src="/@temporada.Foto" alt="Card image cap">
                 <div class="card-body">
