--- a/Views/Home/MenuMares.cshtml
+++ b/Views/Home/MenuMares.cshtml
@@ -9,6 +9,8 @@
                   <h3 class="card-text">@mar.NombreMar</h3>
                   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalMenuMares"
                   onclick="mostrarInfoMar(@mar.IdMar)">Info</button>
+                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalMenuMares"
+                  onclick="mostrarTemporadas(@mar.IdMar)">Temporadas</button>
                 </div>
           </div>
         </div>
