--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -108,3 +108,10 @@ html {
   background-color: yellow;
   color: black;
 }
+#botonEditarPersonaje{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: greenyellow;
+  color: black;
+}
